--- a/20231017_토픽모델링_실습(LSA,_LDA).ipynb
+++ b/20231017_토픽모델링_실습(LSA,_LDA).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8kI4NPbgKYGWRuWsUlLUQ",
+      "authorship_tag": "ABX9TyNA1THm24u6+DusLm9qnD7c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
       "source": [
         "- 토픽 모델링의 한계점\n",
         "1. 최적의 토픽 개수가 뭔지 사용자가 설정해줘야 함.(=> 차원축소, Truncated SVD)\n",
-        "2. 추출된 단어(토큰)들을 보고 토픽이 뭔지 사용자가 추론해내야 함."
+        "2. 추출된 단어(토큰)들을 보고 토픽이 뭔지 사용자가 추론해내야 함.\n",
+        "3. 분석결과가 사람의 인지로 추론해낸 주제와 괴리가 큼"
       ],
       "metadata": {
         "id": "i2LEN4z16eB8"
@@ -58,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "_I7Npa7m5-Gv"
       },
@@ -90,7 +91,7 @@
       "metadata": {
         "id": "ks8Bya5XGb0V"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +109,7 @@
         "id": "IorFhn_hIY_c",
         "outputId": "c8e538d9-2f3a-4f99-fe70-e123bba59405"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +557,7 @@
         "id": "jRJPlKRsIeUK",
         "outputId": "ce3cc9f8-76b7-4b9f-bf46-05586b61eb93"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -582,7 +583,7 @@
         "id": "wZDFQiINIeRt",
         "outputId": "647d25c0-25d8-4a59-dada-bbd825d0e615"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,7 +609,7 @@
         "id": "_c0zBzq4IeOx",
         "outputId": "a89e8750-5d51-49d1-8c50-0cd1e9202935"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,7 +639,7 @@
         "id": "wzXLxFAvIeMH",
         "outputId": "9d5e6c7c-13a9-4986-9c3e-aa7fd57c0ba3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,7 +671,7 @@
       "metadata": {
         "id": "FwXoF-WeNA0E"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +693,7 @@
       "metadata": {
         "id": "BHp51DFNNFdo"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,7 +705,7 @@
       "metadata": {
         "id": "1lhj90z8OuGg"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -737,7 +738,7 @@
         "id": "5GuXhadERFdk",
         "outputId": "aa660d95-96be-47bf-f11f-be829e153157"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +772,7 @@
         "id": "LPoyrA7XXzr1",
         "outputId": "18f9e59c-388d-436d-9dae-47effd659698"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +811,7 @@
         "id": "CrKFUDkkRYMX",
         "outputId": "7ed9fed1-71b1-4a4a-f5c6-bd84072023ff"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -846,7 +847,7 @@
         "id": "JCR4tn-WZ2K8",
         "outputId": "421e837d-cb2f-4176-82df-1b7367ecd058"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +893,7 @@
       "metadata": {
         "id": "m_WObcQ-R_pW"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -912,7 +913,7 @@
       "metadata": {
         "id": "XuXEEjPfR_mb"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -927,7 +928,7 @@
         "id": "oT-nMCpsR_a-",
         "outputId": "62bab00d-1253-49aa-c559-2d973bb6c76f"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -953,7 +954,7 @@
         "id": "6SkOC1zrcKod",
         "outputId": "3d7a9bc0-2ef1-43bb-f5fc-0bebe55abae9"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1001,7 +1002,7 @@
         "id": "wKuZH0wBcZwm",
         "outputId": "33959721-cdac-4fbf-d7d7-d23c4023e3ed"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,7 +1067,7 @@
       "metadata": {
         "id": "vCJBRCQHcZtx"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,7 +1101,7 @@
         "id": "OTtjrWvScbKY",
         "outputId": "f78c8583-b914-4d78-9c94-03e7ebfc331c"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1159,7 +1160,7 @@
       "metadata": {
         "id": "69s9NUA-cbHR"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1182,7 +1183,7 @@
         "id": "fZDPieS1cbDY",
         "outputId": "1b3794e7-722f-41e9-b636-99c3ade941a9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1209,7 +1210,7 @@
       "cell_type": "code",
       "source": [
         "id2word = corpora.Dictionary(tokenized_docs)\n",
-        "print(id2word)"
+        "print(id2word) # 유니크한 토큰사전"
       ],
       "metadata": {
         "colab": {
@@ -1218,7 +1219,7 @@
         "id": "vmC1dyW5cazh",
         "outputId": "ebbb88df-72b4-4fa8-c657-104584e6f52a"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1232,6 +1233,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 토큰사전 전체 확인하려고 for문 돌림\n",
         "for idx in id2word:\n",
         "  print(idx, id2word[idx])"
       ],
@@ -1242,7 +1244,7 @@
         "id": "Kb1AjIhXsYAr",
         "outputId": "cdffcd64-18d6-4f69-dc89-34911635ef3f"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,7 +1284,7 @@
         "id": "B7E4cmmOsdqw",
         "outputId": "3ac25f03-f3a6-409f-d917-5d7e5d2dd194"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1318,7 +1320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "tfidf = TfidfModel(corpus_TDM)\n",
+        "tfidf = TfidfModel(corpus_TDM) # Tfidf모델 선언\n",
         "corpus_TFIDF = tfidf[corpus_TDM]\n",
         "\n",
         "n = 3 # 토픽개수 - 변경 가능\n",
@@ -1328,7 +1330,9 @@
         "               random_state=100)\n",
         "\n",
         "for t in lda.print_topics():\n",
-        "  print(t[0], \":\", t[1])"
+        "  print(t[0], \":\", t[1])\n",
+        "\n",
+        "# 출력된 값은 해당 단어가 그 토픽에 해당할 확률이라고 보면 됨. 다만, 보통 스코어 값이라고 부름."
       ],
       "metadata": {
         "colab": {
@@ -1337,7 +1341,7 @@
         "id": "WR7-9iXOshLI",
         "outputId": "9236414a-200f-4304-e121-9c898ff858b5"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
